# WeldTracker

./: C#程序组织架构.txt  C++目录结构.txt  CMakeLists.txt  HowToCmake.txt  README.md  order of trans.txt
include/: WTrackDType.h
include/ImageMethod/: HGetImage.h  Matrix.h  Matrix.inl  PixelToLaserCoord.h
include/RobotMethod/: LaserCoordToTcp.h  MotoManTCP.h  TrackAlgMethod.h
include/TxtMethod/: TxtMethod.h
src/: WeldTracker.cpp
src/ImageMethod/: PixelToLaserCoord.cpp
src/RobotMethod/: LaserCoordToTcp.cpp  TrackAlgMethod.cpp
src/TxtMethod/: TxtMethod.cpp
tests/: test_LaserCoordToTcp.cpp  test_Matrix.cpp  test_PixelToLaserCoord.cpp  test_TrackAlgMethod.cpp  test_TxtMethod.cpp  test_WTrackDType.cpp
